--- a/sparkler-api/pom.xml
+++ b/sparkler-api/pom.xml
@@ -108,5 +108,17 @@
             <artifactId>pf4j</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>net.sourceforge.htmlunit</groupId>
+            <artifactId>htmlunit</artifactId>
+            <version>2.26</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.7.2</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
